<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Employers.Register_Employer">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_employer"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp" />

    <!-- Form for entering information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Company Email -->
        <EditText
            android:id="@+id/company_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_email" />

        <!-- Company Name -->
        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name" />

        <!-- Company Phone Number -->
        <EditText
            android:id="@+id/company_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_phone_number"
            android:inputType="phone" />

        <!-- Company Address -->
        <EditText
            android:id="@+id/company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_address" />

        <!-- Select Company Image Button -->
        <Button
            android:id="@+id/select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_company_image" />

        <!-- Company Image -->
        <ImageView
            android:id="@+id/company_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/avatar"
            android:layout_marginTop="16dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register" />

    </LinearLayout>


</LinearLayout>