<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Employers.Register_Employer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_employer_Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit_employer"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp" />

    <!-- Form for entering information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Company Email -->
        <EditText
            android:id="@+id/Edt_company_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_email" />

        <!-- Company Name -->
        <EditText
            android:id="@+id/Edt_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name" />

        <!-- Company Phone Number -->
        <EditText
            android:id="@+id/Edt_company_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_phone_number"
            android:inputType="phone" />

        <!-- Company Address -->
        <EditText
            android:id="@+id/Edt_company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_address" />

        <!-- Select Company Image Button -->
        <Button
            android:id="@+id/Btn_select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_company_image" />

        <!-- Company Image -->
        <ImageView
            android:id="@+id/ImgEdt_company_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/avatar"
            android:layout_marginTop="16dp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/Btn_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_account" />

    </LinearLayout>


</LinearLayout>