<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  android:gravity="center"
    tools:context=".Register_Login.forgetpassword">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:textStyle="bold"
            android:textSize="25dp"
           android:gravity="center"
            android:layout_width="match_parent"
            android:text="JobsHunts"
            android:layout_height="wrap_content"/>  
        <TextView
          
            android:textSize="20dp"
           android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/forgetpassword"
            android:layout_height="wrap_content"/>
        <TextView
          
            android:textSize="15dp"
           android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/forgetpasswordtext"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_cancel"
               android:backgroundTint="@color/darkblue"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Cancel"/>
<View
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_send"
                android:backgroundTint="@color/darkblue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/sent"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

</LinearLayout>

</LinearLayout>